--- a/src/view/Login.form
+++ b/src/view/Login.form
@@ -205,6 +205,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Register"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonregisterActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
