--- a/src/view/Tawar.form
+++ b/src/view/Tawar.form
@@ -202,6 +202,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Submit"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonsubmittawarActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="buttonkembali">
               <Properties>
